# workspace-climate-control

./: .gitignore  README.md  co2.code-workspace
.github/workflows/: main.yml
cli/: Cargo.toml  README.md  build.rs  link.sh
cli/src/: bindings.rs  ble_actions.rs  bluetooth.rs  climate_data.rs  history.rs  main.rs  tui_app.rs
cli/src/config/: mod.rs  raw_bindings.rs
cli/src/reactions/: data_reaction.rs  mod.rs  window.rs
cli/src/tui_app/: buttons.rs  calibration_popup.rs  chart.rs  dashboard.rs  dumb_advice.rs  mod.rs
core/: .ccls  .clangd  extra_script.py  platformio.ini
core/src/: ble.cpp  calibration.cpp  certificates.h  data.h  i2c_scanner.cpp  i2c_scanner.h  main.cpp  prometheus.cpp  prometheus.h  serialize.cpp  serialize.h  tempreature_humiidty.rs
dashboards/: co2nsole-health.json  co2nsole.json
firmware/to2-firmware/: Cargo.toml  env.fish
firmware/to2-firmware/.cargo/: config.toml
firmware/to2-firmware/src/: main.rs
shared/: conf.h  conf.local.example.h
windows/: convert.sh  platformio.ini
windows/src/: battery.h  main.cpp
