[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
crossterm = "0.27.0"
futures = "0.3.28"
lazy_static = "1.4.0"
notify-rust = "4.8.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spinners = "4.1.0"
textplots = "0.8.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
ratatui = "0.26.3"
uuid = "1.3.2"
regex = "1.10.4"
btleplug = {  package = "btleplug-goose-fixed",  version = "0.11.5" }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", features = ["vendored"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.69.4"
